--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 header{
   width:100%;
-  background-color: #4754DE;
+  background-color: #4754DE ;
   color:#fff;
   text-align: center;
   padding:1%;
   margin:0;
 }
 
-header{
+/* header{
   width:259%;
-}
+} */
 
 .button1{
   font-weight: 550;
